# trinity-local

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  README.md.bak  SECURITY.md  THIRD_PARTY_NOTICES.md  Trinity Dispatch.shortcut  claude.md  config.example.json  implementation-notes.html  pyproject.toml  setup.sh  uninstall.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
.playwright-mcp/: page-2026-04-28T23-06-00-038Z.yml  page-2026-04-28T23-06-13-279Z.yml  page-2026-04-28T23-06-19-944Z.yml  page-2026-04-28T23-06-56-450Z.yml  page-2026-04-29T02-08-29-019Z.yml  page-2026-04-29T02-08-53-056Z.yml  page-2026-04-29T02-08-56-806Z.yml
browser-extension/: README.md  background.js  content-script.js  harness-snippets.js  launchpad.css  launchpad.html  launchpad.js  manifest.json  package.json  page-hook.js  popup.html  popup.js  smoke-stagehand.mjs  sync-pill.js
browser-extension/adapters/: chatgpt.js  claude.js  gemini.js
data/: reference_evals.json
docs/: CNAME  CUT-CANDIDATES.md  INSTALL-extension.md  INSTALL-pip.md  INSTALL-skill.md  LAUNCH_CHECKLIST.md  MCP_REGISTRY_SUBMISSIONS.md  MIGRATION.md  PARASITISM-AUDIT.md  PREFERENCE_CORPUS_SPEC.md  PUBLIC_READINESS_PLAN.md  REPO_PUBLIC_RUNBOOK.md  SITE_README.md  TRUST-MODE.md  _config.yml  architectural-gaps.md  architecture.md  cross-platform-spec.md  design-frame.md  evals-from-provider.md  founder-essay-draft.md  frontend-architecture.md  how-trinity-works.md  index.html  index.md  install-deep.md  launch-package.md  launch.md  launcher-patterns.md  lens-from-provider.md  lens-redesign.md  lens.md  maxroom-redesign.html  pending-questions.md  product-spec.md  project-lens.md  scale-plan.md  simplification_log.md  spec-gemini-google-handoff.md  spec-v1.5.md  (+8 more)
docs/articles/: ai-native-way.html  architecture-of-becoming.html  design-the-affordance.html  gravity-of-becoming.html  utopia-is-a-mechanism.html
docs/demo/: README.md
docs/historical/: PUBLIC_READINESS_PLAN.md  brand-evolution.md  cross-platform-spec.md  founder-essay-draft.md  gstack-audit.md  principles.md  retirement-log.md  scale-plan.md  simplification_log.md  spec-v1.5.md  spec-v1.6.md  spec-v2.md  sweep-patterns.md  training-data.md  trust-mode.md  v2-loop-constitution.md
docs/launch-day/: 00_leaderboard.md  01_tweet_thread.md  02_show_hn_post.md  03_hn_objection_faq.md  04_demo_voiceover.md  05_comparison_table.md  06_founder_narrative.md  07_pricing_faq.md  08_twitter_bio.md  09_linkedin_post.md  10_hn_faq_full.md  README.md
docs/smoke/: cold-start-launchpad.html
keepwhatworks/: README.md  index.html  style.css
keepwhatworks/articles/: ai-native-way.html  architecture-of-becoming.html  gravity-of-becoming.html  utopia-is-a-mechanism.html
schemas/: council_outcome.schema.json  eval_set.schema.json  move.schema.json  rejection_signal.schema.json  trust.schema.json
schemas/examples/: council_outcome.example.json  (+5 more)
scripts/: __init__.py  _runtime.py  add_doc_class_frontmatter.py  anchor.py  browser_smoke.py  cluster.py  descriptor.py  embed.py  find_orphans.py  install.sh  known_orphans.txt  launch-check.sh  launcher_path_resolver.sh  pca.py  record_handoff_demo.sh  refresh-vendor.sh  regen_launchpad_example.sh  render_docs.py  render_extension_icons.py  signature.py  smoke_install.sh  smoke_install_macvm.sh  vendor-sha256.txt
tests/: conftest.py  test_action_count_fastpath.py  test_adapters.py  test_antigravity_ingest.py  test_arc_mining.py  test_ask.py  test_auto_open_council.py  test_autofill_wiring.py  test_basin_auto_k.py  test_basin_label.py  test_browser_capture_surface.py  test_browser_captured_chatgpt_ingest.py  test_browser_captured_ingest.py  test_browser_extension_chatgpt_adapter.py  test_browser_extension_claude_adapter.py  test_browser_extension_gemini_adapter.py  test_browser_extension_manifest.py  test_canonical_cli_count.py  test_capture_host_no_network.py  test_capture_host_stdio.py  test_chairman_fallback.py  test_chairman_picker.py  test_chapters.py  test_chrome_extension_smoke.py  test_claude_sampling_wireup.py  test_cli_surface_consolidation.py  test_clobber_guard_propagation.py  test_cold_open.py  test_cold_start.py  test_commands_review.py  test_consensus_chain.py  test_core_status.py  test_correction_lens.py  test_cortex.py  test_cortex_cli.py  test_cortex_geometry.py  test_cost_tracker.py  test_council_last.py  test_council_review.py  test_council_review_missing_status_timeout.py  (+183 more)
tools/: sync_reference_evals.py
(+230 files in other folders)
