[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-local"
version = "0.1.0"
description = "Local TRINITY-style coordinator for MLX and CLI agents on macOS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
trinity-local = "trinity_local.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
