[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-local"
version = "1.0.0"
description = "Cross-provider memory layer for Claude, GPT, and Gemini — local-first councils, handoff, and personal benchmarks. Rides on your existing subscriptions."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Pillow>=10",
    "mcp>=1.0",  # MCP-default install — Trinity is exposed as an MCP server to Claude Code / Codex CLI / Gemini CLI
]

[project.scripts]
trinity-local = "trinity_local.main:main"
trinity-local-capture-host = "trinity_local.capture_host:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trinity_local = [
    "data/skills/**/*.md",
    "data/vendor/*.js",
]

[project.optional-dependencies]
test = ["pytest>=7"]
mlx = [
    "sentence-transformers>=2.2",
    "einops",
    "torch>=2.0",
]

[tool.pytest.ini_options]
markers = [
    "real_corpus: runs against the real ~/.trinity install; skipped when none present",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
